Fix overflow caused by input on small screens

--- a/src/web/style.css
+++ b/src/web/style.css
@@ -174,6 +174,8 @@ button:focus-visible {
   font-weight: 700;
   border-radius: 4px;
   padding: 0.3em;
+  min-width: 0;
+  width: calc(100% - 1rem);
 }
 
 .target-languages {
